# parallelSysAssignment

./: Makefile
MPI/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  sobel_filter_mpi  sobel_filter_mpi.cpp
Multi-Threaded/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  sobel_filter_mt  sobel_filter_mt.cpp
OpenCL/src/: CMakeLists.txt
OpenCL/src/sobel_filter/: CMakeLists.txt  sobel_filter.cpp
Sequential/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  sobel_filter  sobel_filter.cpp
src/: CMakeLists.txt
src/comparator/: CMakeLists.txt  comparator.cpp
src/sobel_filter/: CMakeLists.txt  sobel_filter.cpp
src/sobel_filter_mpi/: CMakeLists.txt  sobel_filter_mpi.cpp
src/sobel_filter_mt/: CMakeLists.txt
src/sobel_filter_opencl/: CMakeLists.txt
