cmake_minimum_required(VERSION 2.8)
project( sobel_filter_mpi )
find_package( OpenCV REQUIRED )
find_package(MPI REQUIRED)
include_directories( ${OpenCV_INCLUDE_DIRS} )
include_directories(${MPI_INCLUDE_PATH})
add_executable( sobel_filter_mpi sobel_filter_mpi.cpp )
target_link_libraries( sobel_filter_mpi ${OpenCV_LIBS} ${MPI_LIBRARIES} )
if(MPI_COMPILE_FLAGS)
  set_target_properties(sobel_filter_mpi PROPERTIES
    COMPILE_FLAGS "${MPI_COMPILE_FLAGS} -std=c++14")
endif()
if(MPI_LINK_FLAGS)
  set_target_properties(sobel_filter_mpi PROPERTIES
    LINK_FLAGS "${MPI_LINK_FLAGS}")
endif()